--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 	"author": "",
 	"license": "ISC",
 	"devDependencies": {
+		"@tailwindcss/custom-forms": "^0.2.1",
 		"cross-env": "^7.0.2",
 		"laravel-mix": "^5.0.4"
 	},
